crates/nash-can/tests/snapshots/kinds__kind_annotation_storable.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type alias xs ('a : Storable) = list 'a"
---
(
    [],
    [
        (
            "xs",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 38,
                                },
                                end: Position {
                                    line: 5,
                                    column: 40,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
)
