crates/nash-can/tests/snapshots/kinds__kind_annotation_term.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type wrapper ('a : Term) = Wrap 'a"
---
(
    [
        (
            "wrapper",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Term",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 15,
                                },
                                end: Position {
                                    line: 5,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
