crates/nash-can/tests/snapshots/kinds__labeled_fields.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Datum = Datum { owner : Bytes, amount : Int }\n"
---
(
    [
        (
            "Datum",
            Type,
            [],
        ),
    ],
    [],
)
