crates/nash-can/tests/snapshots/kinds__let_annotation_rejects_little_container_element.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\nf =\n    let\n        g : list (option int) -> int\n        g x = 1\n    in\n    g\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `g`:
    ╭─[src/Main.nash:9:19]
  8 │     let
  9 │         g : list (option int) -> int
    ·                   ──────────
 10 │         g x = 1
    ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
