crates/nash-can/tests/snapshots/kinds__little_alias.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias count = int\n"
---
(
    [],
    [
        (
            "count",
            Type,
            [],
        ),
    ],
)
