crates/nash-can/tests/snapshots/kinds__little_function_field.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype thunk 'a = Thunk (unit -> 'a)\n"
---
(
    [
        (
            "thunk",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
    ],
    [],
)
