crates/nash-can/tests/snapshots/kinds__little_record_alias.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias acc = { total : int, seen : list Int }\n"
---
(
    [],
    [
        (
            "acc",
            Type,
            [],
        ),
    ],
)
