crates/nash-can/tests/snapshots/kinds__little_record_field_rejects_an_arrow_kind.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias record 'f 'a = { applied : 'f 'a, head : 'f }\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field `head` of little record alias `record`.
   ╭─[src/Main.nash:6:53]
 5 │ 
 6 │ type alias record 'f 'a = { applied : 'f 'a, head : 'f }
   ·                                                     ──
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
