crates/nash-can/tests/snapshots/kinds__little_union.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type option 'a = None | Some 'a"
---
(
    [
        (
            "option",
            KindScheme {
                bounds: [
                    KindSet(
                        7,
                    ),
                ],
                kind: Arrow(
                    Var(
                        0,
                    ),
                    Base(
                        Term,
                    ),
                ),
            },
        ),
    ],
    [],
)
