crates/nash-can/tests/snapshots/kinds__lowercase_alias_big_body.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias id = Int\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Little` in the lowercase name of alias `id`:
   ╭─[src/Main.nash:6:17]
 5 │ 
 6 │ type alias id = Int
   ·                 ───
   ╰────
  help: The type has `Big` representation, but `Little` admits Const or Term types.
        Change the type or the representation requirement.
