crates/nash-can/tests/snapshots/kinds__mutual_union_alias.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Tree = Node (List Branch)\ntype alias Branch = Tree\n"
---
(
    [
        (
            "Tree",
            Type,
            [],
        ),
    ],
    [
        (
            "Branch",
            Type,
            [],
        ),
    ],
)
